# route-ai

./: .gitignore  pyproject.toml
configs/: default.yaml
scripts/: test.py  train.py
src/data/: dataset.py
src/models/: __init__.py  autoencoder.py  encoder.py  output_encoder.py  transformer.py
src/utils/: config.py
